--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Ignore dataset folders
-task/task 8/Train/
-task/task 8/Test/
-task/task 8/Meta/
+task/*/Train/
+task/*/Test/
+task/*/Meta/
 
 # Ignore CSV files (optional)
 task/*/*.csv
