update gitignore and adding task 6 code and files

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,10 @@
 task/*/Train/
 task/*/Test/
 task/*/Meta/
+task/*/data
 
 # Ignore CSV files (optional)
-task/*/*.csv
+**/*.csv
 
 # Ignore zip files
 *.zip
